--- a/video-backend/package.json
+++ b/video-backend/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "aws-sdk": "^2.1651.0",
     "axios": "^1.7.2",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -11,6 +11,7 @@
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "get-video-duration": "^4.1.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
