--- a/video-frontend/package.json
+++ b/video-frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
+    "rc-footer": "^0.6.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
