--- a/video-backend/package.json
+++ b/video-backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "aws-sdk": "^2.1651.0",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
