--- a/video-backend/services/polling/package.json
+++ b/video-backend/services/polling/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aws-sdk": "^2.1664.0",
     "axios": "^1.7.2",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "pg": "^8.13.1"
   }
 }
