--- a/video-backend/services/polling/package.json
+++ b/video-backend/services/polling/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.1664.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "http": "^0.0.1-security",
     "pg": "^8.13.1"
   }
 }
